fixed broken parallax scaling.
images shown where too small.

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
   /* Enable scrolling on the page. */
   overflow-y: auto;
   /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
-  perspective: 1.5px;
+  perspective: 1px;
 }
 
 .section {
@@ -262,7 +262,7 @@ body {
   /* Move the pseudo-element back away from the camera,
    * then scale it back up to fill the viewport.
    * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  transform: translateZ(-1px) scale(1.5);
+  transform: translateZ(-1px) scale(2);
   /* Force the background image to fill the whole element. */
   background-size: 100%;
   /* Keep the image from overlapping sibling elements. */
